Fixes tags not being wide enough, causing spacing issues

--- a/src/assets/css/7-components/_postlist.scss
+++ b/src/assets/css/7-components/_postlist.scss
@@ -77,6 +77,8 @@
     display: inline flex;
     align-items: center;
     > span {
+        width: 100%;
+        text-align: center;
         background-color: var(--accentColorTransparent);
         border-radius: 4px;
         padding: 0.5ch 1ch;
